--- a/Exercise4_1/bower.json
+++ b/Exercise4_1/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jQuery": "3.2.1",
     "requirejs": "2.3.5",
-    "knockout": "v3.4.2" 
+    "knockout": "v3.4.2",
+    "text": "requirejs-text#2.0.15"
   }
 }
