--- a/Exercise4_1/Exercise4_1.csproj
+++ b/Exercise4_1/Exercise4_1.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\components\" />
+    <Folder Include="wwwroot\js\services\" />
+    <Folder Include="wwwroot\js\components\posts\" />
+  </ItemGroup>
 </Project>
