Components keeps state and back button added

--- a/Exercise4_1/Properties/launchSettings.json
+++ b/Exercise4_1/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:64167/api/posts",
+      "applicationUrl": "http://localhost:64167/",
       "sslPort": 0
     }
   },
